--- a/ethereum/erc20-htlc-swap/src/index.html
+++ b/ethereum/erc20-htlc-swap/src/index.html
@@ -2,83 +2,60 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>PRA ERC-20兑换主网币</title>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>PRA ERC-20兑换主网币</title>
 
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="css/bootstrap.min.css" rel="stylesheet">
 
 </head>
 
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12 col-sm-12">
-                <h1 class="text-center">PRA ERC-20兑换主网币 <img id="loader" src="images/load.gif"> </h1>
-                <hr />
-            </div>
-        </div>
-        <div class="form-horizontal">
-            <div class="form-group">
-                <label>数量:</label>
-                <input id="input_num" placeholder="大于等于0.1" size="100"></input>
-            </div>
-            <div class="form-group">
-                <button for="approve_new" class="btn btn-primary" id="approve_new">approve</button>
-            </div>
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-6 col-sm-6">
+				<h1 class="text-center">PRA ERC-20兑换主网币 </h1>
+				<hr />
+			</div>
+		</div>
+		<div class="form-horizontal">
+			<div class="form-group">
+				<label>数量:</label>
+				<input id="input_num" placeholder="大于等于0.1" size="50"></input>
+			</div>
+			<div class="form-group">
+				<button for="approve_new" class="btn btn-primary" id="approve_new">approve允许扣款</button>
+			</div>
 
-        </div>
-        <div class="form-horizontal">
-            <div class="form-group">
-                <label>RandomHash:</label>
-                <input id="random_num_hash" placeholder="0x开头的hex_string" size="100"></input>
-            </div>
-            <div class="form-group">
-                <label>TimeStamp:</label>
-                <input id="time_stamp" placeholder="秒" size="100"></input>
-            </div>
-            <div class="form-group">
-                <label>区块高度范围:</label>
-                <input id="height_span" placeholder=">=60 && <=60480" size="100"></input>
-            </div>
-            <div class="form-group">
-                <label>erc20-pra锁仓地址:</label>
-                <input id="recipient_addr" value="0xCF5bECb7245E2e6eE2E092F0BD63F6Bd79eF19Fe" size="100"></input>
-            </div>
-            <div class="form-group">
-                <label>DID:</label>
-                <input id="did" placeholder="收款did" size="100"></input>
-            </div>
-            <div class="form-group">
-                <button for="htlc_new" class="btn btn-primary " id="htlc_new">htlc</button>
-            </div>
-        </div>
-        <div class="form-horizontal">
-            <div class="form-group">
-                <label>RandomNum:</label>
-                <input id="random_num" placeholder="0x开头的hex_string" size="100"></input>
+		</div>
+		<div class="form-horizontal">
+			<div class="form-group">
+				<label>DID:</label>
+				<input id="did" placeholder="收款did" size="50"></input>
+			</div>
+			<div class="form-group">
+				<label>随机数:</label>
+				<input id="random_num" placeholder="0x开头的hex_string" size="50"></input>
+			</div>
+			<div class="form-group">
+				<button for="htlc_new" class="btn btn-primary " id="htlc_new">htlc发起兑换</button>
+			</div>
+			<div class="form-group">
+				<button for="claim" class="btn btn-primary" id="claim">claim确认</button>
+				<button for="refund" class="btn btn-primary" id="refund">refund撤销</button>
+			</div>
+		</div>
+	</div>
 
-            </div>
-            <div class="form-group">
-                <label>SwapID:</label>
-                <input id="swap_id" placeholder="0x开头的hex_string" size="100"></input>
-            </div>
-            <div class="form-group">
-                <button for="claim" class="btn btn-primary" id="claim">claim</button>
-                <button for="refund" class="btn btn-primary" id="refund">refund</button>
-            </div>
-        </div>
-    </div>
+	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+	<script src="js/jquery.min.js"></script>
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="js/jquery.min.js"></script>
-
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/web3.min.js"></script>
-    <script src="js/truffle-contract.js"></script>
-    <script src="js/app.js"></script>
+	<!-- Include all compiled plugins (below), or include individual files as needed -->
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/web3.min.js"></script>
+	<script src="js/truffle-contract.js"></script>
+	<script src="js/app.js"></script>
 </body>
 
 </html>
