--- a/ethereum/erc20-htlc-swap/src/index.html
+++ b/ethereum/erc20-htlc-swap/src/index.html
@@ -34,7 +34,7 @@
 				<label>DID:</label>
 				<input id="did" placeholder="收款did" size="50"></input>
 			</div>
-			<div class="form-group">
+			<div class="form-group" hidden>
 				<label>随机数（自动生成）:</label>
 				<input id="random_num" placeholder="0x开头的hex_string" size="50" readonly="true"></input>
 			</div>
